[tool.poetry]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = ["Patrick Alves <cpatrickalves@gmail.com>"]
readme = "README.md"
packages = [{include = "reflexion_agent"}]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
python-dotenv = "^1.0.1"
langchain = "^0.2.1"
loguru = "^0.7.2"
langchain-openai = "^0.1.8"
langgraph = "^0.0.56"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
